<resources>
    <string name="app_name">KOTLIN</string>
    <string name="action_settings">Settings</string>
    <string name="dlina_kosbI">ДЛИНА КОСЫ</string>
    <string name="skidka">СКИДКА %</string>
    <string name="cena_so_skidkoi">Цена со скидкой</string>
    <string name="dlina_ovala">ДЛИНА ОВАЛА</string>
    <string name="shirina_ovala">ШИРИНА ОВАЛА</string>
    <string name="trybok_v_kose">ТРУБОК В КОСЕ</string>
    <string name="poschitatb">ПОСЧИТАТЬ</string>
    <string name="cena">Цена</string>
    <string name="dlina">Длина</string>
    <string name="foto_tkanb">ФОТО ТКАНЬ</string>
    <string name="kryglaya_kravatka">КРУГЛАЯ КРОВАТКА</string>
    <string name="Glavnaya">Главная</string>
    <string-array name="otvetu">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="otvetu_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="otvetu">Ответы</string>
    <string name="otvetu_opicanie">Количество правильных ответов</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_foto">FotoActivity</string>
</resources>
